WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
179400
There is no such thing as block element continuation
https://bugs.webkit.org/show_bug.cgi?id=179400
Summary
There is no such thing as block element continuation
Antti Koivisto
Reported
2017-11-07 16:05:28 PST
There are no non-anonymous block continuations. This is dead code.
Attachments
patch
(5.27 KB, patch)
2017-11-07 16:07 PST
,
Antti Koivisto
zalan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2017-11-07 16:07:50 PST
Created
attachment 326272
[details]
patch
Build Bot
Comment 2
2017-11-07 16:10:37 PST
Attachment 326272
[details]
did not pass style-queue: ERROR: Source/WebCore/rendering/RenderBlock.cpp:420: Multi line control clauses should use braces. [whitespace/braces] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Antti Koivisto
Comment 3
2017-11-07 17:03:26 PST
https://trac.webkit.org/r224561
Radar WebKit Bug Importer
Comment 4
2017-11-15 12:09:39 PST
<
rdar://problem/35567042
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug