There is no such thing as block element continuation https://bugs.webkit.org/show_bug.cgi?id=179400

Reviewed by Zalan Bujtas.

There are no non-anonymous block continuations. This is dead code.

* rendering/RenderBlock.cpp:
(WebCore::borderOrPaddingLogicalWidthChanged):
(WebCore::RenderBlock::styleDidChange):
(WebCore::RenderBlock::blockElementContinuation const): Deleted.

    This would always return null.

* rendering/RenderBlock.h:



Canonical link: https://commits.webkit.org/195467@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224561 268f45cc-cd09-0410-ab3c-d52691b4dbfc